--- a/demo-snow/vars/aap-config.yml
+++ b/demo-snow/vars/aap-config.yml
@@ -2,7 +2,7 @@
 # Details of a ServiceNow host
 snow_hostname: https://dev266474.service-now.com/
 snow_username: admin
-snow_password: a@Me1fMW6z$F
+snow_password: password
 
 controller_organizations:
   - name: "midrange"
